2009-02-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error without libcares when epoll is available.
	* src/EpollEventPoll.cc

2009-02-09  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Included fstream instead of iostream.
	* test/SignatureTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed #include <algorithm>
	* test/RequestGroupTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten AdaptiveURISelector::mayRetryWithIncreasedTimeout()
	using RequestGroup::extractURIResult().
	* src/AdaptiveURISelector.cc
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* test/RequestGroupTest.cc

2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added tests for array_ptr.
	* test/array_funTest.cc
	
2009-02-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Don't send ip parameter to a tracker if ip parameter is empty
	string.	
	* src/DefaultBtAnnounce.cc

2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Adjusted line feed.
	* src/version_usage.cc
	
2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Print tags, possible values when OptionHandlerException is caught.
	* src/option_processing.cc
	
2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the message for FatalException.
	* src/OptionParser.cc
	
2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented --bt-external-ip option in man page.  Updated man pages
	for --proxy-method option.
	* doc/aria2c.1.txt

2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use GET method for FTP via HTTP proxy.
	* src/FtpInitiateConnectionCommand.cc
	
2009-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Changed the default value of --proxy-method option from 'tunnel'
	to 'get'. Use 'tunnel' for HTTPS regardless of --proxy-method
	option.
	* src/AbstractCommand.cc