@@ -9,7 +9,6 @@ class AlphaNumberDecoratorTest:public CppUnit::TestFixture {
   CPPUNIT_TEST_SUITE(AlphaNumberDecoratorTest);
   CPPUNIT_TEST(testDecorate);
   CPPUNIT_TEST(testDecorate_uppercase);
-  CPPUNIT_TEST(testDecorate_minus);
   CPPUNIT_TEST_SUITE_END();
 private:
 
@@ -19,7 +18,6 @@ public:
 
   void testDecorate();
   void testDecorate_uppercase();
-  void testDecorate_minus();
 };
 
 
@@ -39,11 +37,6 @@ void AlphaNumberDecoratorTest::testDecorate_uppercase()
   CPPUNIT_ASSERT_EQUAL(std::string("Z"), AlphaNumberDecorator(1, true).decorate(25));
   CPPUNIT_ASSERT_EQUAL(std::string("ZZ"), AlphaNumberDecorator(1, true).decorate(675)); // 25*26+25
   CPPUNIT_ASSERT_EQUAL(std::string("AAB"), AlphaNumberDecorator(3, true).decorate(1));
-}
-
-void AlphaNumberDecoratorTest::testDecorate_minus()
-{
-  CPPUNIT_ASSERT_EQUAL(std::string("NXMRLXV"), AlphaNumberDecorator(1, true).decorate(-1));
 }
 
 } // namespace aria2
